[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/LANNetwork/listener/listener.gd" type="Script" id=1]
[ext_resource path="res://Pc/List.gd" type="Script" id=2]
[ext_resource path="res://addons/LANNetwork/client/client.gd" type="Script" id=3]

[node name="List" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vertical" type="VBoxContainer" parent="List"]
margin_right = 1140.0
size_flags_horizontal = 3

[node name="ServerListener" type="Node" parent="."]
script = ExtResource( 1 )

[node name="NetworkClient" type="Node" parent="."]
script = ExtResource( 3 )
address = ""
port = 42269

[connection signal="server_found" from="ServerListener" to="." method="serverFound"]
[connection signal="server_lost" from="ServerListener" to="." method="serverLost"]
